--- a/benchmarks/daxpy/5kk/Makefile
+++ b/benchmarks/daxpy/5kk/Makefile
@@ -14,47 +14,21 @@ cpu: clean setup_env cpu_prepare_code cpu_compile cpu_measure
 
 cpu_prepare_code: 
 	make prepare_sequential
-	make prepare_cpu_exhaustive_optimum
-	make prepare_cpu_evolutionary_optimum
+	make get_discopop_patterns
+	make prepare_single_suggestions
 
 cpu_compile:
 	make compile_sequential
-	make compile_cpu_exhaustive_optimum
-	make compile_cpu_evolutionary_optimum
+	make compile_single_suggestions
 
 cpu_measure:
 	make measure_sequential
-	make measure_cpu_exhaustive_optimum
-	make measure_cpu_evolutionary_optimum
+	make measure_single_suggestions
+
 
 cpu_cleanup:
-	make cleanup_sequential
-	make cleanup_cpu_exhaustive_optimum
-	make cleanup_cpu_evolutionary_optimum
+	rm -rvf code_*
 
-######### GPU
-gpu: clean setup_env gpu_prepare_code gpu_compile gpu_measure
-	
-
-gpu_prepare_code:
-	make prepare_sequential
-	make prepare_gpu_exhaustive_optimum
-	make prepare_gpu_evolutionary_optimum
-
-gpu_compile:
-	make compile_sequential
-	make compile_gpu_exhaustive_optimum
-	make compile_gpu_evolutionary_optimum
-
-gpu_measure:
-	make measure_sequential
-	make measure_gpu_exhaustive_optimum
-	make measure_gpu_evolutionary_optimum	
-
-gpu_cleanup:
-	make cleanup_sequential
-	make cleanup_gpu_exhaustive_optimum
-	make cleanup_gpu_evolutionary_optimum
 
 ##### DISCOPOP 
 get_discopop_patterns:
@@ -65,11 +39,11 @@ get_discopop_patterns:
 	cp -r code/.discopop/* clean_dp_folder
 	ls -a clean_dp_folder
 	cd clean_dp_folder && discopop_explorer --enable-patterns=reduction,doall
+	cd clean_dp_folder && discopop_optimizer -v -x 
+	cd clean_dp_folder && discopop_patch_generator -a optimizer/patterns.json
 
 ##### SEQUENTIAL
-cleanup_sequential:
-	rm -rvf code_sequential
-prepare_sequential: cleanup_sequential
+prepare_sequential:
 	make reset_env
 	mv code code_sequential
 	mkdir -p logs/sequential
@@ -77,6 +51,33 @@ compile_sequential:
 	-cd code_sequential && cmake -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_C_FLAGS=${CPU_CC_FLAGS} -DCMAKE_CXX_FLAGS=${CPU_CXX_FLAGS} . && make
 measure_sequential:
 	-/usr/bin/time --format="sequential;%e;%x;" --append --output=measurements.csv code_sequential/prog 1>> logs/sequential/stdout.txt 2>> logs/sequential/stderr.txt
+
+
+
+##### SINGLE SUGGESTIONS
+SUGGESTIONS_DIR=./clean_dp_folder/patch_generator
+prepare_single_suggestions: $(SUGGESTIONS_DIR)/*
+	for f in $^; do \
+		basename $${f}; \
+		rm -rvf code_$$(basename $${f}); \
+		make reset_env; \
+		ls; \
+		pwd; \
+		cd dp_folder && discopop_patch_applicator -v -a $$(basename $${f}); \
+		cd .. ;\
+		mv code code_$$(basename $${f}); \
+		mkdir -p logs/$$(basename $${f}); \
+	done
+compile_single_suggestions: $(SUGGESTIONS_DIR)/*
+	for f in $^; do \
+		cd code_$$(basename $${f}) && cmake -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_C_FLAGS=${CPU_CC_FLAGS} -DCMAKE_CXX_FLAGS=${CPU_CXX_FLAGS} . && make ; \
+		cd .. ; \
+	done
+measure_single_suggestions: $(SUGGESTIONS_DIR)/*
+	for f in $^; do \
+		/usr/bin/time --format="$$(basename $${f});%e;%x;" --append --output=measurements.csv code_$$(basename $${f})/prog 1>> logs/$$(basename $${f})/stdout.txt 2>> logs/$$(basename $${f})/stderr.txt ; \
+	done
+
 
 ##### CPU EXHAUSTIVE
 cleanup_cpu_exhaustive_optimum:
@@ -92,53 +93,6 @@ compile_cpu_exhaustive_optimum:
 	-cd code_cpu_exhaustive_optimum && cmake -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_C_FLAGS=${CPU_CC_FLAGS} -DCMAKE_CXX_FLAGS=${CPU_CXX_FLAGS} . && make
 measure_cpu_exhaustive_optimum:
 	-/usr/bin/time --format="cpu_exhaustive;%e;%x;" --append --output=measurements.csv code_cpu_exhaustive_optimum/prog 1>> logs/cpu_exhaustive/stdout.txt 2>> logs/cpu_exhaustive/stderr.txt
-
-##### CPU EVOLUTIONARY
-cleanup_cpu_evolutionary_optimum:
-	rm -rvf code_cpu_evolutionary_optimum
-prepare_cpu_evolutionary_optimum: cleanup_cpu_evolutionary_optimum get_discopop_patterns
-	make reset_env
-	cd dp_folder && pwd && discopop_optimizer -v ${DP_OPTIMIZER_FLAGS} --system-configuration ../../../../configuration/cpu_only_system_configuration.json
-	cd dp_folder && discopop_patch_generator -v -fcf optimizer/updated_configuration.json
-	cd dp_folder && discopop_patch_applicator -v -fcf optimizer/updated_configuration.json
-	mv code code_cpu_evolutionary_optimum
-	mkdir -p logs/cpu_evolutionary
-compile_cpu_evolutionary_optimum:
-	-cd code_cpu_evolutionary_optimum && cmake -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_C_FLAGS=${CPU_CC_FLAGS} -DCMAKE_CXX_FLAGS=${CPU_CXX_FLAGS} . && make
-measure_cpu_evolutionary_optimum:
-	-/usr/bin/time --format="cpu_evolutionary;%e;%x;" --append --output=measurements.csv code_cpu_evolutionary_optimum/prog 1>> logs/cpu_evolutionary/stdout.txt 2>> logs/cpu_evolutionary/stderr.txt
-
-##### GPU EXHAUSTIVE
-cleanup_gpu_exhaustive_optimum:
-	rm -rvf code_gpu_exhaustive_optimum
-prepare_gpu_exhaustive_optimum: cleanup_gpu_exhaustive_optimum get_discopop_patterns
-	make reset_env
-	cd dp_folder && pwd && discopop_optimizer -v -x ${DP_OPTIMIZER_FLAGS} --system-configuration ../../../../configuration/system_configuration.json
-	cd dp_folder && discopop_patch_generator -v -fcf optimizer/updated_configuration.json
-	cd dp_folder && discopop_patch_applicator -v -fcf optimizer/updated_configuration.json
-	mv code code_gpu_exhaustive_optimum
-	mkdir -p logs/gpu_exhaustive
-compile_gpu_exhaustive_optimum:
-	-cd code_gpu_exhaustive_optimum && cmake -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_C_FLAGS=${GPU_CC_FLAGS} -DCMAKE_CXX_FLAGS=${GPU_CXX_FLAGS} . && make
-measure_gpu_exhaustive_optimum:
-	-/usr/bin/time --format="gpu_exhaustive;%e;%x;" --append --output=measurements.csv code_gpu_exhaustive_optimum/prog 1>> logs/gpu_exhaustive/stdout.txt 2>> logs/gpu_exhaustive/stderr.txt
-
-##### GPU EVOLUTIONARY
-cleanup_gpu_evolutionary_optimum:
-	rm -rvf code_gpu_evolutionary_optimum
-prepare_gpu_evolutionary_optimum: cleanup_gpu_evolutionary_optimum get_discopop_patterns
-	make reset_env
-	cd dp_folder && pwd && discopop_optimizer -v ${DP_OPTIMIZER_FLAGS} --system-configuration ../../../../configuration/system_configuration.json
-	cd dp_folder && discopop_patch_generator -v -fcf optimizer/updated_configuration.json
-	cd dp_folder && discopop_patch_applicator -v -fcf optimizer/updated_configuration.json
-	mv code code_gpu_evolutionary_optimum
-	mkdir -p logs/gpu_evolutionary
-compile_gpu_evolutionary_optimum:
-	-cd code_gpu_evolutionary_optimum && cmake -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_C_FLAGS=${GPU_CC_FLAGS} -DCMAKE_CXX_FLAGS=${GPU_CXX_FLAGS} . && make
-measure_gpu_evolutionary_optimum:
-	-/usr/bin/time --format="gpu_evolutionary;%e;%x;" --append --output=measurements.csv code_gpu_evolutionary_optimum/prog 1>> logs/gpu_evolutionary/stdout.txt 2>> logs/gpu_evolutionary/stderr.txt
-
-#####
 
 setup_env:
 	echo "ID; time; return_code;" > measurements.csv
@@ -159,7 +113,5 @@ clean:
 	rm -rvf measurements.csv
 	rm -rvf logs
 	make cpu_cleanup
-	make gpu_cleanup
-
 
 
