polybench: atax: fixed typo in Makefile

--- a/benchmarks/Makefile
+++ b/benchmarks/Makefile
@@ -17,3 +17,5 @@ clean:
 	cd daxpy && make clean
 	cd daxpy_modified && make clean
 	cd daxpy_collapsable && make clean
+	cd LULESH_seq && make clean
+	cd polybench_seq && make clean
