--- a/configuration/system_configuration.json
+++ b/configuration/system_configuration.json
@@ -1,8 +1,8 @@
 {
   "devices": [
     {
-      "compute_init_delays": {
-        "doall": 9.6e-05
+      "compute_init_delays[us]": {
+        "doall": 224.0
       },
       "device_id": 4,
       "device_type": 0,
@@ -11,8 +11,8 @@
       "threads": 96
     },
     {
-      "compute_init_delays": {
-        "target_teams_distribute_parallel_for": 0.005494
+      "compute_init_delays[us]": {
+        "target_teams_distribute_parallel_for": 5213.0
       },
       "device_id": 0,
       "device_type": 1,
@@ -20,20 +20,20 @@
       "processors": 128,
       "teams": 3200,
       "threads": 3200,
-      "transfer_init_delays": {
-        "average": 4.933333333333333e-05,
-        "target_data_update": 5.4999999999999995e-05,
-        "target_enter_data": 8.999999999999999e-05,
-        "target_exit_data": 3e-06
+      "transfer_init_delays[us]": {
+        "average": 75.49999999999999,
+        "target_data_update": 54.0,
+        "target_enter_data": 97.0,
+        "target_exit_data": 2.0
       },
       "transfer_speeds": {
-        "D2H_MB/s": 1828.614897359846,
-        "H2D_MB/s": 3652.0475204423365
+        "D2H_MB/s": 1823.094228448292,
+        "H2D_MB/s": 3647.332158892378
       }
     },
     {
-      "compute_init_delays": {
-        "target_teams_distribute_parallel_for": 0.004769
+      "compute_init_delays[us]": {
+        "target_teams_distribute_parallel_for": 5299.0
       },
       "device_id": 1,
       "device_type": 1,
@@ -41,20 +41,20 @@
       "processors": 128,
       "teams": 3200,
       "threads": 3200,
-      "transfer_init_delays": {
-        "average": 4.266666666666666e-05,
-        "target_data_update": 3.9e-05,
-        "target_enter_data": 8.499999999999999e-05,
-        "target_exit_data": 4e-06
+      "transfer_init_delays[us]": {
+        "average": 71.5,
+        "target_data_update": 49.99999999999999,
+        "target_enter_data": 93.0,
+        "target_exit_data": 5.0
       },
       "transfer_speeds": {
-        "D2H_MB/s": 1849.0611392065682,
-        "H2D_MB/s": 4277.123377900959
+        "D2H_MB/s": 1888.3672798824682,
+        "H2D_MB/s": 4294.112342567107
       }
     },
     {
-      "compute_init_delays": {
-        "target_teams_distribute_parallel_for": 0.005848
+      "compute_init_delays[us]": {
+        "target_teams_distribute_parallel_for": 3981.9999999999995
       },
       "device_id": 2,
       "device_type": 1,
@@ -62,20 +62,20 @@
       "processors": 128,
       "teams": 3200,
       "threads": 3200,
-      "transfer_init_delays": {
-        "average": 8.666666666666665e-05,
-        "target_data_update": 6.9e-05,
-        "target_enter_data": 0.000187,
-        "target_exit_data": 4e-06
+      "transfer_init_delays[us]": {
+        "average": 65.99999999999999,
+        "target_data_update": 42.99999999999999,
+        "target_enter_data": 89.0,
+        "target_exit_data": 5.0
       },
       "transfer_speeds": {
-        "D2H_MB/s": 1888.0570948465486,
-        "H2D_MB/s": 4206.806613099996
+        "D2H_MB/s": 1898.6464549422717,
+        "H2D_MB/s": 4323.6512369966185
       }
     },
     {
-      "compute_init_delays": {
-        "target_teams_distribute_parallel_for": 0.005461
+      "compute_init_delays[us]": {
+        "target_teams_distribute_parallel_for": 5300.0
       },
       "device_id": 3,
       "device_type": 1,
@@ -83,15 +83,15 @@
       "processors": 128,
       "teams": 3200,
       "threads": 3200,
-      "transfer_init_delays": {
-        "average": 8.866666666666665e-05,
-        "target_data_update": 7.099999999999999e-05,
-        "target_enter_data": 0.00019099999999999998,
-        "target_exit_data": 4e-06
+      "transfer_init_delays[us]": {
+        "average": 53.5,
+        "target_data_update": 28.0,
+        "target_enter_data": 79.0,
+        "target_exit_data": 4.0
       },
       "transfer_speeds": {
-        "D2H_MB/s": 1873.9857052370407,
-        "H2D_MB/s": 4266.9397508107195
+        "D2H_MB/s": 1886.3404429504626,
+        "H2D_MB/s": 4267.504235497954
       }
     }
   ],
