--- a/configuration/cpu_only_system_configuration.json
+++ b/configuration/cpu_only_system_configuration.json
@@ -1,15 +1,16 @@
 {
   "devices": [
     {
-      "compute_init_delays": {
-        "doall": 9.6e-05
+      "compute_init_delays[us]": {
+        "doall": 22883.0
       },
       "device_id": 4,
       "device_type": 0,
       "frequency": 3000000000,
       "processors": 96,
+      "speedup": 35.93021392633809,
       "threads": 96
     }
-  ],
+    ],
   "host_device": 4
 }
