miniAMR without optimizer

--- a/clean_code/miniMD/ref/Makefile
+++ b/clean_code/miniMD/ref/Makefile
@@ -72,6 +72,14 @@ intel:
 	$(MAKE)  "OBJ = $(OBJ)" "INC = $(INC)" "EXE = ../$(EXE)" ../$(EXE)
 #       @if [ -d Obj_$@ ]; then cd Obj_$@; rm $(SRC) $(INC) Makefile*; fi
 
+discopop.patterns:
+	@if [ ! -d Obj_$@ ]; then mkdir Obj_$@; fi
+	@cp -p $(SRC) $(INC) Obj_$@
+	@cp Makefile.$@ Obj_$@/Makefile
+	@cd Obj_$@; \
+	$(MAKE)  "OBJ = $(OBJ)" "INC = $(INC)" "EXE = ../$(EXE)" ../$(EXE)
+
+
 
 # Clean
 
