--- a/benchmarks/miniFE/Makefile
+++ b/benchmarks/miniFE/Makefile
@@ -1,7 +1,7 @@
 all: cpu
 
 cpu: 
-	./build_and_measure.sh
+	DP_PROJECT_ROOT_DIR=/home/lukas/git/benchmark_harness/benchmarks/miniFE ./build_and_measure.sh
 
 gpu:
 
