miniFE: makefile: minor improvements

--- a/benchmarks/miniFE/Makefile
+++ b/benchmarks/miniFE/Makefile
@@ -1,7 +1,9 @@
+cwd := $(shell pwd)
+
 all: cpu
 
-cpu: 
-	DP_PROJECT_ROOT_DIR=/home/lukas/git/benchmark_harness/benchmarks/miniFE ./build_and_measure.sh
+cpu:
+	DP_PROJECT_ROOT_DIR=${cwd} ./build_and_measure.sh
 
 gpu:
 
