--- a/auto_tuner_benchmarks/NPB/IS/Makefile
+++ b/auto_tuner_benchmarks/NPB/IS/Makefile
@@ -24,4 +24,4 @@ execute_dynamic_analysis:
 execute_auto_tuner:
 	cd IS_orig && mv DP_COMPILE_IS.sh DP_COMPILE.sh
 	cd IS_orig && mv DP_EXECUTE_IS.sh DP_EXECUTE.sh
-	cd IS_orig && discopop_auto_tuner --log debug --project-path $$(pwd) --dot-dp-path $$(pwd)/bin/.discopop --skip-cleanup
+	cd IS_orig && discopop_auto_tuner --log debug --project-path $$(pwd) --dot-dp-path $$(pwd)/bin/.discopop 
