--- a/auto_tuner_benchmarks/NPB/MG/Makefile
+++ b/auto_tuner_benchmarks/NPB/MG/Makefile
@@ -24,4 +24,4 @@ execute_dynamic_analysis:
 execute_auto_tuner:
 	cd MG_orig && mv DP_COMPILE_MG.sh DP_COMPILE.sh
 	cd MG_orig && mv DP_EXECUTE_MG.sh DP_EXECUTE.sh
-	cd MG_orig && discopop_auto_tuner --log debug --project-path $$(pwd) --dot-dp-path $$(pwd)/bin/.discopop --skip-cleanup
+	cd MG_orig && discopop_auto_tuner --log debug --project-path $$(pwd) --dot-dp-path $$(pwd)/bin/.discopop
