--- a/auto_tuner_benchmarks/NPB/SP/Makefile
+++ b/auto_tuner_benchmarks/NPB/SP/Makefile
@@ -24,4 +24,4 @@ execute_dynamic_analysis:
 execute_auto_tuner:
 	cd SP_orig && mv DP_COMPILE_SP.sh DP_COMPILE.sh
 	cd SP_orig && mv DP_EXECUTE_SP.sh DP_EXECUTE.sh
-	cd SP_orig && discopop_auto_tuner --log debug --project-path $$(pwd) --dot-dp-path $$(pwd)/bin/.discopop --skip-cleanup
+	cd SP_orig && discopop_auto_tuner --log debug --project-path $$(pwd) --dot-dp-path $$(pwd)/bin/.discopop
