add parallel reference to measurements

--- a/auto_tuner_benchmarks/NPB/CG/Makefile
+++ b/auto_tuner_benchmarks/NPB/CG/Makefile
@@ -1,6 +1,6 @@
 all: cpu
 
-cpu: clean copy_code execute_hotspot_detection execute_dynamic_analysis execute_auto_tuner
+cpu: clean copy_code execute_hotspot_detection execute_dynamic_analysis execute_auto_tuner execute_parallel_reference
 
 clean: 
 	rm -rvf CG_*
@@ -25,3 +25,8 @@ execute_auto_tuner:
 	cd CG_orig && mv DP_COMPILE_CG.sh DP_COMPILE.sh
 	cd CG_orig && mv DP_EXECUTE_CG.sh DP_EXECUTE.sh
 	cd CG_orig && discopop_auto_tuner --log debug --project-path $$(pwd) --dot-dp-path $$(pwd)/bin/.discopop
+
+execute_parallel_reference:
+	cp -r ../../../clean_code/NPB-OMP CG_OMP
+	cd CG_OMP && ./DP_COMPILE_CG.sh
+	cd CG_OMP && /usr/bin/time --append --format="REF; %e; %x;" -o ../CG_orig/measurements.csv ./DP_EXECUTE_CG.sh
