--- a/auto_tuner_benchmarks/NPB/BT/Makefile
+++ b/auto_tuner_benchmarks/NPB/BT/Makefile
@@ -1,6 +1,6 @@
 all: cpu
 
-cpu: clean copy_code execute_hotspot_detection execute_dynamic_analysis execute_auto_tuner
+cpu: clean copy_code execute_hotspot_detection execute_dynamic_analysis execute_auto_tuner execute_parallel_reference
 
 clean: 
 	rm -rvf BT_*
@@ -25,3 +25,8 @@ execute_auto_tuner:
 	cd BT_orig && mv DP_COMPILE_BT.sh DP_COMPILE.sh
 	cd BT_orig && mv DP_EXECUTE_BT.sh DP_EXECUTE.sh
 	cd BT_orig && discopop_auto_tuner --log debug --project-path $$(pwd) --dot-dp-path $$(pwd)/bin/.discopop
+
+execute_parallel_reference:
+	cp -r ../../../clean_code/NPB-OMP BT_OMP
+	cd BT_OMP && ./DP_COMPILE_BT.sh
+	cd BT_OMP && /usr/bin/time --append --format="REF; %e; %x;" -o ../BT_orig/measurements.csv ./DP_EXECUTE_BT.sh
