--- a/auto_tuner_benchmarks/NPB/LU/Makefile
+++ b/auto_tuner_benchmarks/NPB/LU/Makefile
@@ -1,6 +1,6 @@
 all: cpu
 
-cpu: clean copy_code execute_hotspot_detection execute_dynamic_analysis execute_auto_tuner
+cpu: clean copy_code execute_hotspot_detection execute_dynamic_analysis execute_auto_tuner execute_parallel_reference
 
 clean: 
 	rm -rvf LU_*
@@ -25,3 +25,9 @@ execute_auto_tuner:
 	cd LU_orig && mv DP_COMPILE_LU.sh DP_COMPILE.sh
 	cd LU_orig && mv DP_EXECUTE_LU.sh DP_EXECUTE.sh
 	cd LU_orig && discopop_auto_tuner --log debug --project-path $$(pwd) --dot-dp-path $$(pwd)/bin/.discopop
+
+execute_parallel_reference:
+	cp -r ../../../clean_code/NPB-OMP LU_OMP
+	cd LU_OMP && ./DP_COMPILE_LU.sh
+	cd LU_OMP && /usr/bin/time --append --format="REF; %e; %x;" -o ../LU_orig/measurements.csv ./DP_EXECUTE_LU.sh
+
