add parallel reference

--- a/auto_tuner_benchmarks/burkardt/md/Makefile
+++ b/auto_tuner_benchmarks/burkardt/md/Makefile
@@ -1,6 +1,6 @@
 all: cpu
 
-cpu: clean copy_code execute_hotspot_detection execute_dynamic_analysis execute_auto_tuner
+cpu: clean copy_code execute_hotspot_detection execute_dynamic_analysis execute_auto_tuner execute_parallel_reference
 
 clean:
 	rm -rvf md_*
@@ -26,4 +26,9 @@ execute_dynamic_analysis:
 
 execute_auto_tuner:
 	cd md_orig && echo "$$(pwd)"
-	cd md_orig && discopop_auto_tuner --log debug --project-path $$(pwd) --dot-dp-path $$(pwd)/build/.discopop --skip-cleanup
+	cd md_orig && discopop_auto_tuner --log debug --project-path $$(pwd) --dot-dp-path $$(pwd)/build/.discopop
+
+execute_parallel_reference:
+	cp -r ../../../clean_code/burkardt/md_parallel md_PAR
+	cd md_PAR && ./DP_COMPILE.sh
+	cd md_PAR && /usr/bin/time --append --format="REF; %e; %x;" -o ../md_orig/measurements.csv ./DP_EXECUTE.sh
